<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2012 Mark Injerd

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
	<string name="app_name">Voice Notify</string>
	
	<!-- Used by multiple files -->
	<string name="app_is_ignored">%s is ignored</string>
	<string name="app_is_not_ignored">%s is not ignored</string>
	<string name="service_running">VN service is running</string>
	<string name="service_suspended">VN service is suspended</string>
	
	<!-- xml/service_config.xml -->
	<string name="service_desc">Reads status bar notifications with Text-To-Speech.</string>
	
	<!-- xml/preferences.xml -->
	<string name="tts_settings">TTS Settings</string>
	<string name="tts_settings_summary">Open the Android Text-To-Speech settings.</string>
	<string name="tts_settings_summary_fail">Unable to find TTS settings! If it exists on your device (it should), please contact the developer.</string>
	<string name="tts_message">TTS Message</string>
	<string name="tts_message_summary">Customize how Text-To-Speech says notifications.</string>
	<string name="tts_message_dialog">%t = App title\n%m = Notification message</string>
	<string name="tts_stream">TTS Audio Stream</string>
	<string name="tts_stream_summary">Choose the audio stream that Text-To-Speech plays through.</string>
	<string name="tts_delay">TTS Delay</string>
	<string name="tts_delay_summary">Delay TTS a set number of seconds after notification.</string>
	<string name="tts_delay_dialog_msg">Number of seconds to wait after notification before speaking.</string>
	<string name="tts_repeat">TTS Repeat</string>
	<string name="tts_repeat_summary">Continually repeat notifications over TTS until screen turns on.</string>
	<string name="tts_repeat_dialog_msg">Notifications are repeated at the defined interval until the screen is turned on. Notifications created while the screen is on are not repeated.\n\nValue is in minutes. Blank or 0 to disable.</string>
	<string name="speak_toasts">Speak Toasts</string>
	<string name="speak_toasts_summary">Also speak toast (bubble) notifications.</string>
	<string name="shake_to_silence">Shake-To-Silence</string>
	<string name="shake_to_silence_summary">Adjust the sensitivity threshold of Shake-To-Silence.</string>
	<string name="shake_to_silence_dialog_msg">Lower values are more sensitive.\n\nDefault: 100\nBlank to disable.</string>
	<string-array name="stream_name">
		<item>Media</item>
		<item>Notification</item>
		<item>Voice</item>
		<item>Ring</item>
		<item>Alarm</item>
	</string-array>
	<string name="ignore_strings">Ignore Text</string>
	<string name="ignore_strings_summary">Ignore notifications that contain certain text in the message.</string>
	<string name="ignore_empty">Ignore Empty</string>
	<string name="ignore_empty_summary_on">Notifications without a message will not be spoken.</string>
	<string name="ignore_empty_summary_off">Notifications without a message will be spoken as \"Notification from [app name].\"</string>
	<string name="ignore_strings_dialog_msg">Separate individual entries with a new line.</string>
	<string name="device_state">Device States</string>
	<string name="device_state_summary">Select whether to speak during certain device states.</string>
	<string name="device_state_dialog_title">Speak during these device states</string>
	<string-array name="device_states">
		<item>Screen Off</item>
		<item>Screen On</item>
		<item>Headset Off</item>
		<item>Headset On</item>
		<item>Silent/Vibrate</item>
	</string-array>
	<string name="ignore_repeat">Ignore Repeats</string>
	<string name="ignore_repeat_summary">Ignore subsequent identical notifications within a set time.</string>
	<string name="ignore_repeat_dialog_msg">Set number of seconds that must pass since last notification before a repeat can be spoken.\nIgnored repeats reset the count and different notifications clear it.\nBlank = infinite.</string>
	<string name="app_list">App List</string>
	<string name="app_list_summary">List installed apps which can be ignored.</string>
	<string name="quiet_start">Quiet Time Start</string>
	<string name="quiet_start_summary">Don\'t speak after this time.\nLeave the same as end to disable.</string>
	<string name="quiet_end">Quiet Time End</string>
	<string name="quiet_end_summary">Don\'t speak before this time.\nLeave the same as start to disable.</string>
	<string name="test_summary">Post a notification (delayed 5 seconds) to test current settings.</string>
	<string name="test_ignored">Voice Notify is ignored in App List.\nTest will run, but notification will not be spoken.</string>
	<string name="support_summary">Donate, rate/comment, translations, source code, or contact the developer.</string>
	<string name="audio_focus">Pause/dim media</string>
	<string name="audio_focus_summary">Request other media to pause/dim when speaking</string>
	
	<!-- MainActivity.java and xml/preferences.xml -->
	<string name="test">Test</string>
	<string name="notify_log">Notification Log</string>
	<string name="notify_log_summary">List last 20 notifications. Displays time, app name, message, and ignore reasons.</string>
	<string name="support">Support Voice Notify</string>
	
	<!-- MainActivity.java -->
	<string name="service_disabled">VN service is disabled</string>
	<string name="status_summary_accessibility">Open the Android Accessibility settings to enable or disable VN.</string>
	<string name="status_summary_suspended">Select to activate VN.</string>
	<string name="test_notify_msg">This is a test notification.</string>
	<string name="donate">Donate</string>
	<string-array name="support_items">
		<item>@string/donate</item>
		<item>Rate/Comment</item>
		<item>Contact Developer</item>
		<item>Translations</item>
		<item>Source Code</item>
	</string-array>
	<string-array name="donate_services">
		<item>Google Wallet</item>
		<item>PayPal</item>
	</string-array>
	<string name="donate_wallet_title">Donate - Google Wallet</string>
	<string name="donate_wallet_message">If you are in the United States and would like to donate via Google Wallet, simply use the Send Money feature and address it to pilota51@gmail.com.\nUnfortunately, Send Money is not available outside the US.\n\nThank you for using and supporting Voice Notify!</string>
	<string name="donate_wallet_launch_app">Launch Wallet App</string>
	<string name="donate_wallet_launch_web">Open Wallet Website</string>
	<string name="dev_email">pilota51@gmail.com</string>
	<string name="email_subject">Contacting about Voice Notify</string>
	<string name="email_body">\n\nVN version: %1$s\nAndroid version: %2$s\nAndroid build number: %3$s\nDevice: %4$s\n</string>
	<string name="error_market">Error: Unable to find Market installed.</string>
	<string name="error_email">Error: Unable to find an installed email app.</string>
	
	<!-- Service.java -->
	<string name="notification_from">Notification from %s.</string>
	<string name="error_tts_init">Error: Could not initialize TTS!</string>
	
	<!-- NotifyList.java -->
	<string name="yes">Yes</string>
	<string name="ignore_app">Ignore %s?</string>
	<string name="unignore_app">Unignore %s?</string>
	
	<!-- menu/app_list.xml-->
	<string name="ignore_all">Ignore All</string>
	<string name="ignore_none">Ignore None</string>
	<string name="filter">Filter</string>
	
	<!-- Ignore/Silence reasons -->
	<string name="reason_app">Ignored app</string>
	<string name="reason_string">Ignored text</string>
	<string name="reason_empty_msg">Empty message</string>
	<string name="reason_identical">Identical message within {0,choice,-1#infinite seconds|1#{0} second|1&lt;{0} seconds}</string>
	<string name="reason_quiet">Quiet time</string>
	<string name="reason_silent">Silent or vibrate mode</string>
	<string name="reason_call">Active or ringing call</string>
	<string name="reason_screen_off">Screen off</string>
	<string name="reason_screen_on">Screen on</string>
	<string name="reason_headset_off">Headset off</string>
	<string name="reason_headset_on">Headset on</string>
	<string name="reason_shake">Silenced by shake</string>
	<string name="reason_suspended">VN suspended by widget</string>
</resources>
